implementación del debounce

--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -5,8 +5,9 @@
   <div class="row">
     <div class="col">
       <!-- SearchBox -->
+      <!-- (onValue)="searchByCapital($event)" -->
       <shared-search-box
-       (onValue)="searchByCapital($event)"
+       (onDebounce)="searchByCapital($event)"
        [placeholderTxt]="placeholderTake"></shared-search-box>
     </div>
   </div>
@@ -14,6 +15,7 @@
   <div class="row">
     <div class="col">
       <hr>
+      <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
       <countries-table [countries]="countries"></countries-table>
     </div>
   </div>
