--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -8,6 +8,7 @@
       <!-- (onValue)="searchByName($event)" -->
       <shared-search-box
       (onDebounce)="searchByName($event)"
+      [initialValue] = "initialValue"
        [placeholderTxt]="placeholderTake"></shared-search-box>
     </div>
   </div>
