--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,14 +1,10 @@
-<!-- <div class="bg-dark border-right p-2" id="sidebar">
+<div class="bg-dark border-right p-2" id="sidebar">
   <h2 class="text-white">Países</h2>
-  <hr class="text-white"> -->
-
-<div>
-  <h2>Países</h2>
-  <hr>
+  <hr class="text-white">
   <ul class="list-group">
-    <!-- <li routerLink=""
-      routerLinkActive="active"
-      [routerLinkActiveOptions]="{exact: true}"
+    <li routerLink=""
+    routerLinkActive="active"
+    [routerLinkActiveOptions]="{exact: true}"
       class="list-group-item">
       Home Page
     </li>
@@ -21,7 +17,7 @@
     routerLinkActive="active"
     class="list-group-item">
     Contact Page
-    </li> -->
+    </li>
     <li routerLink="countries/by-capital"
     routerLinkActive="active"
     class="list-group-item">
